--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -45,7 +45,7 @@
 <script>
   // HOST must be the server IP or DNS name when app running on a server
   // and localhost when running locally
-  const HOST = "localhost";
+  const HOST = "http://164.90.209.204/";
   
   (async function init() {
     const response = await fetch(`http://${HOST}:8080/get-data`);
